[gd_scene load_steps=8 format=3 uid="uid://naowbprck41c"]

[ext_resource type="Script" uid="uid://b58rbcdpj05vg" path="res://scene/page/session/session-details/session_details_game_info.gd" id="1_afddt"]
[ext_resource type="PackedScene" uid="uid://xn0nhcleo38w" path="res://scene/components/board-game/board_game_info.tscn" id="1_njcnk"]
[ext_resource type="PackedScene" uid="uid://crc7i3to3i23b" path="res://scene/components/button/icon-button/icon-button.tscn" id="2_fietd"]
[ext_resource type="Texture2D" uid="uid://b0xqkr57rhqtb" path="res://asset/icon/victory-full-green.svg" id="3_bmh2n"]
[ext_resource type="Texture2D" uid="uid://p40t4t3iy5jv" path="res://asset/icon/victory-empty-grey.svg" id="3_njcnk"]
[ext_resource type="Theme" uid="uid://cbq3hxgptt55t" path="res://resource/theme/main_theme.tres" id="4_fietd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bmh2n"]

[node name="SessionDetailsGameInfo" type="Control"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afddt")
empty_like_texture = ExtResource("3_njcnk")
full_like_texture = ExtResource("3_bmh2n")
empty_color = Color(0.698039, 0.698039, 0.698039, 1)
liked_color = Color(0.129412, 0.545098, 0.396078, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="BoardGameInfo" parent="HBoxContainer" instance=ExtResource("1_njcnk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(128, 200)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_fietd")
theme_type_variation = &"ListItemPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="LikeButton" parent="HBoxContainer/Panel/VBoxContainer" instance=ExtResource("2_fietd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" parent="HBoxContainer/Panel/VBoxContainer/LikeButton" index="0"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_bmh2n")

[node name="MarginContainer" parent="HBoxContainer/Panel/VBoxContainer/LikeButton" index="1"]
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Icon" parent="HBoxContainer/Panel/VBoxContainer/LikeButton/MarginContainer" index="0"]
texture = ExtResource("3_njcnk")

[node name="LikeAmount" type="Label" parent="HBoxContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_fietd")
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/LikeButton" to="." method="_on_like_button_pressed"]

[editable path="HBoxContainer/Panel/VBoxContainer/LikeButton"]
